<resources>
    <string name="app_name">CloudStorage</string>
    <string name="checkIn">Refresh Store List</string>
    <string name="onlineShopping">Online Shopping</string>
    <string name="myAccount">My Account</string>
    <string name="nearbyPlaces">Select a store to see store offers and information</string>
    <string name="offers">Current Offers</string>
    <string name="place_logo">Store Logo</string>
    <string name="retrievingPlaces">Retrieving the list of nearby stores&#8230;</string>
    <string name="retrievingOffers">Retrieving the offers&#8230;</string>
    <string name="retrievingRecommendations">Retrieving product recommendations&#8230;</string>
    <string name="failedToRetrievePlaces">Failed to retrieve the list of nearby stores</string>
    <string name="failedToRetrieveOffers">Failed to retrieve offers</string>
    <string name="failedToRetrieveRecommendations">Failed to retrieve recommendations</string>
    <string name="noPlacesNearby">No stores found nearby</string>
    <string name="noOffers">No offers currently available</string>
    <string name="noRecommendations">No product recommendations currently available</string>
    <string name="distance">Distance: %2$.1f miles</string>
    <string name="priceCheck">Price Check</string>
    <string name="recommendations">Product Recommendations</string>
    <string name="notification_PriceCheckLowerPrices1_1product">Good news!\nThe price for %1s is now
        lower than when you recently did a price check!
    </string>
    <string name="notification_PriceCheckLowerPrices1_manyProducts">Good news!\nThe price for %1$s
        and %2$d more item(s) is now lower than when you recently did a price check!
    </string>
    <string name="offer_Image">Image</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="menu_refresh">Refresh</string>
    <string name="gcmRegistrationError">An error occurred during
        registration. Trying again later</string>
    <string name="gcmRegistrationSuccess">Device registered, registration
        ID= %1s</string>
</resources>
